--- a/login.html
+++ b/login.html
@@ -253,7 +253,7 @@ input {
 			<input type="text" id="registerUsername" placeholder="Name" required/>
 			<input type="email" id="registerEmail" placeholder="Email" required/>
 			<input type="password" id="registerPassword" placeholder="Password" required/>
-			<input type="password" id="confirmPassword" name="Confirm Password" required>
+			<input type="password" id="confirmPassword" placeholder="Confirm Password" required>
 			<button type="submit">Sign Up</button>
 		</form>
 	</div>
