--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ body{
       <li>
         <div class="profile-details" id="profile-details" style="display: none;">
           <div class="profile-content">
-              <img src="image/placeholder.png" alt="profileImg">
+              <img src="images/placeholder.png" alt="profileImg">
           </div>
           <div class="name-job">
               <div class="profile_name" id="username"></div>
